Normalement tout est fix, data est faite

--- a/Projet/.vscode/settings.json
+++ b/Projet/.vscode/settings.json
@@ -46,6 +46,11 @@
         "numbers": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "chrono": "cpp",
+        "codecvt": "cpp",
+        "ratio": "cpp",
+        "iomanip": "cpp",
+        "sstream": "cpp"
     }
 }
