--- a/Projet/.vscode/settings.json
+++ b/Projet/.vscode/settings.json
@@ -52,5 +52,6 @@
         "ratio": "cpp",
         "iomanip": "cpp",
         "sstream": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
